Still fixing protocol appendix

--- a/TP3/dissertation/Requirements/features.tex
+++ b/TP3/dissertation/Requirements/features.tex
@@ -22,7 +22,6 @@ The many messaging programs already out there provided us with a solid foundatio
 
 The `Must Have' category has features that were taken from the initial problem specification, containing the basic elements of an instant messenger. Sending messages, using a GUI, and user statuses were taken from the problem definition, however we felt it was crucial and within the scope of this project to include contact lists and user nicknames as must have features.
 
-
 \subsection*{Should Have Features}
 
 \begin{itemize}
@@ -77,7 +76,7 @@ Features which we `Would Like To Have' are the lowest priority, and thus aren't 
 
 \subsection*{Rejected Features}
 
-There were some features which we agreed were not desirable or worth our time implementing.
+There were some features which we agreed were not desirable, or worth our time implementing.
 
 \begin{itemize}
 
