Added summaries/intros where needed. Some of them could use expanding on.

--- a/TP3/dissertation/Design/design.tex
+++ b/TP3/dissertation/Design/design.tex
@@ -11,4 +11,5 @@ The following chapter explains how we designed the system. As it is the most cru
 
 \input{Design/networking.tex}
 
-%TODO: Chapter conclusion. Reflect on your design, and summarize the chapter. Explain how it relates to the implementation chapter.
+\section{Summary}
+Getting the design of a system correct is the most important and difficult part of a computing science project. We spent a fair amount of time on it, making sure we understand what's going on before we started coding. As expected, we didn't get everything right the first time. In the next chapter, the implementation of these designs will be discussed, and the problems we encountered with the design during coding.
