--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -1,4 +1,5 @@
 \section{Client}
+\label{clientimpl}
 
 This section will analyse how appropriate our client design was to achieve the aims outlined in section \ref{client_design}. Some of our design choices worked well, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of Java to implement chat windows, which reduced the challenge of routing internal messages to the correct windows. These aspects will be discussed in section \ref{designimpl}.
 
