--- a/TP3/dissertation/Implementation/communication.tex
+++ b/TP3/dissertation/Implementation/communication.tex
@@ -1,4 +1,6 @@
 \section{Client-Server Communication}
+\label{comm}
+
 While no encryption is specifically defined in the protocol, the GIM client and server use SSL encryption to keep their communication secure. The \texttt{java.net.ssl} package provides access to all classes needed to enable the secure connection, in particular the SSLSocket and SSLServerSocket classes.
 
 When the server starts it creates an SSLServerSocket on port 4444. It then generates a list of supported cipher suites and filters them to only include ones which use 128bit AES encryption, limits the socket to using only these ciphers, and waits for incoming connections using the accept() method.
