--- a/TP3/dissertation/Requirements/features.tex
+++ b/TP3/dissertation/Requirements/features.tex
@@ -91,4 +91,5 @@ There were some features which we agreed were not desirable, or worth our time i
 
 Nudges and winks are considered by many to be an irritation which is prone to abuse, hence our decision to not include them. Spell Checking was considered, but due to the typically informal nature of IM conversations and the fact that people purposely misspell words at times, it was not included.
 
+\section{Summary}
 The features outlined here provided us with a variety of goals for the system. As no members of the team had previous experience working in a project of this scale, the time required for implementation was unclear. The MoSCoW list allowed us to seperate our concerns into manageable priorities which could be acheived incrementally.
