--- a/TP3/dissertation/Introduction/intro.tex
+++ b/TP3/dissertation/Introduction/intro.tex
@@ -6,7 +6,7 @@ This project is not about joining that competition. Instead, we are using this o
 
 The instant messenger model that we decided to use consists of a server, any number of clients, and a set of rules defining how the server and clients talk to each other, called a protocol. A user of the program is essentially interacting with a client, and the clients interact with each other through the server. That communication is structured using the protocol.
 
-Instead of using the protocol and server of an existing instant messenger and focusing on the client, we decided to create the entire system ourselves. This way we're able to learn more about the whole process of creating such a program. We have divided ourselves into two smaller groups: two of us to do the networking and make the server, and the other two to make the client, including the user interface, or UI.
+Instead of using the protocol and server of an existing instant messenger and focusing on the client, we decided to create the entire system ourselves. This way we're able to learn more about the whole process of creating such a program. We divided ourselves into two smaller groups: two of us to do the networking and make the server, and the other two to make the client, including the user interface, or UI.
 
 This report is meant for the Computing Science professors at Glasgow University, fellow Computing Science students, and anyone with an interest in instant messaging or the process of completing a larger-scale Computing Science project.
 
